# memoire_bdehem

./: CMakeLists.txt  CONTRIBUTING.md  Doxyfile  Doxyfile~  Link to Documentation.html  PtamFixParams.yaml  README.md~  mainpage.dox  oldcode.cpp  package.xml
auxiliary code/: dosomebenchmark
auxiliary code/matlab/: data_pts2.txt  rollPitchYawToChangeBaseMatrix.m  rollPitchYawToRotationMatrix.m  superPoly.m  triangulate.m  triangulate4.m  viewpt1.csv
auxiliary code/python/: analyse_all_benchmarks.py  benchmark_basic.bag  benchmark_basic2.bag  cutstart.py  fillNaNs.py  getbenchmarkinfo.py  helloworld.py  repairbagfile.py  result_250.0.bag  treat_data.py
auxiliary code/results/: bigresults  ptremoveresult  thresh and rpt  thresh and rpt4  tolbanchamarkresults  tolbanchamarkresults_bis
auxiliary code/testcvsba/: Makefile  Makefile~  main.cpp
auxiliary_code/: evaluate_all_benchmarks.py  evaluate_benchmark.py  reference_poses.pkl
auxiliary_code/matlab/: data_ptsout.txt  getEssentialMatrix.m  getPolyCoefs.m  get_fakeresults.m  makePointSet.m  visualize_expresults.m
auxiliary_code/python/: analyse_all_benchmarks.py  analyse_cost_per_obs.py  in_and_out.py  read_bagfile.py  repairuptwosquare.py  treat_data.py  treat_data_old_to_pickle.py
auxiliary_code/results/: in_and_outliers.csv  tolbanchamarkresults  tug  tug2
auxiliary_code/testcvsba/: CMakeLists.txt  main  testcvsba.cpp
camera_info/: ardrone_front.yaml
config/: README.md
documentation/html/: annotated.html  bundle__adjuster_8h.html  bundle__adjuster_8h_source.html  camera_8h.html  camera_8h_source.html  classBALProblem-members.html  classBALProblem.html  classBasicController-members.html  classBasicController.html  classBundle.html  classBundleAdjuster-members.html  classBundleAdjuster.html  classDroneRole-members.html  classDroneRole.html  classImageProcessor-members.html  classImageProcessor.html  classKeyframe-members.html  classKeyframe.html  classManualPoseEstimator-members.html  classManualPoseEstimator.html  classMap-members.html  classMap.html  classMappingNode-members.html  classMappingNode.html  classMultiStrategy-members.html  classMultiStrategy.html  classPathPlanning-members.html  classPathPlanning.html  classPiper-members.html  classPiper.html  classPoseEstimator-members.html  classPoseEstimator.html  classProcessedImage-members.html  classProcessedImage.html  classRead-members.html  classRead.html  classStrategy-members.html  classStrategy.html  classTarget-members.html  classTarget.html  (+96 more)
documentation/latex/: annotated.tex  bundle__adjuster_8h.tex  camera_8h.tex  classBALProblem.tex  classBasicController.tex  classBundle.tex  classBundleAdjuster.tex  classDroneRole.tex  classImageProcessor.tex  classKeyframe.tex  classManualPoseEstimator.tex  classMap.tex  classMappingNode.tex  classMultiStrategy.tex  classPathPlanning.tex  classPiper.tex  classPoseEstimator.tex  classProcessedImage.tex  classRead.tex  classStrategy.tex  classTarget.tex  classVisionGui.tex  controller_8h.tex  drone__role_8h.tex  feature__types_8h.tex  files.tex  frame_8h.tex  image__processor_8h.tex  keyframe_8h.tex  landmark_8h.tex  manual__pose__estimation_8h.tex  map_8h.tex  map__utils_8h.tex  mapping__node_8h.tex  multi__strategy_8h.tex  opencv__utils_8h.tex  path__planning_8h.tex  pose__estimation_8h.tex  profiling_8h.tex  projection__2D_8h.tex  (+10 more)
drone_preparation/Appareillage/: README.md
include/boris_drone/: PointXYZRGBSIFT.h  boris_drone.h  controller.h  drone_role.h  imagepiper.h  manual_pose_estimation.h  multi_strategy.h  opencv_utils.h  path_planning.h  path_planning_1.h  pose_estimation.h  profiling.h  read_from_launch.h  strategy.h  strategy_1.h
include/ucl_drone/: controller.h  drone_role.h  imagepiper.h  manual_pose_estimation.h  multi_strategy.h  opencv_utils.h  path_planning.h  pose_estimation.h  profiling.h  read_from_launch.h  strategy.h  ucl_drone.h
launch/: README.md  benchmark.launch  benchmark_v2.launch  controller.xml  driver.xml  drone_8.launch  fly.launch  global_params.xml  gui.xml  make_benchmark.launch  make_benchmark_v2.launch  make_manual_pose_signal.launch  only_computer_vision.launch  play_rosbag.launch  play_rosbag_with_ptam.launch  play_with_rosbag.launch  ptam_only.launch  read_from_drone.launch  simple_and_modified.launch  slam.xml  start_mission_boris.launch  test_with_drone.launch  test_with_rosbag.launch  tum_ardrone_double.launch  two_simples_new.launch  two_simples_new.launch.orig
launch/components/: README.md  controller.xml  driver.xml  gui.xml  slam.xml
matlab/: data_pts1.txt  getCameraPositionMatrices.m  getFundamentalMatrix.m  getFundamentalMatrix2.m  getTransf.m  get_expresults.m  optimalTriangulate.m  project2D.m  quicktest.m  test_optimal_triangulate.m  testfundmat.m  triangulate3.m  untitled.m  untitled2.m  viewpt2.csv
msg/: BenchmarkInfoMsg.msg  BundleMsg.msg  DroneRoles.msg  ObservationMsg.msg  StrategyMsg.msg
report/: Makefile  Sources  eplmastersthesis.cls  main.acn  main.acr  main.alg  main.aux  main.bbl  main.bcf  main.blg  main.fdb_latexmk  main.fls  main.glsdefs  main.ist  main.out  main.tex  main.tex.blg  main.toc  references help  references.bib
report/chapters/: 00_cover.tex  01_introduction.aux  01_introduction.tex  02_stateoftheart.aux  02_stateoftheart.tex  03_computervision.aux  03_computervision.tex  04_localisation.aux  04_localisation.tex  05_mapping.aux  05_mapping.fdb_latexmk  05_mapping.fls  05_mapping.tex  06_results.aux  06_results.fdb_latexmk  06_results.fls  06_results.tex  06_slam.tex  07_conclusion.aux  07_conclusion.tex  99_backcover.tex  Makefile  abstract.tex  appendix.aux  appendix.tex  chapter02.tex  chapter03.tex  chapter04.tex  chapter05.fdb_latexmk  chapter05.fls  chapter05.tex  chapter06.tex  chapter07.tex  glossary.aux  glossary.tex
report/graphics/: allresult_barobust.eps  benchmark_setup.eps_tex  cvflowchart.eps  locflowchart.eps  (+3 more)
src/: imagepiper.cpp  opencv_utils.cpp  read_from_launch.cpp
zz_old code/: keyframe  oldCmakelists  old_ba.cpp  oldcode.cpp  oldmap.cpp  oldutils  processed image  processed_image.cpp
(+166 files in other folders)
